<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.scandalquizzapp.MainActivity">

    <ImageView style="@style/banner" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <LinearLayout style="@style/question_block">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        style="@style/image_bullet"
                        android:src="@drawable/bullet_icon_2" />

                    <TextView
                        android:id="@+id/question_one"
                        style="@style/question_text"
                        android:text="@string/question_one" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/options_1"
                    style="@style/question_options"
                    android:orientation="vertical"
                    >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_option1"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_option2"
                        />

                    <RadioButton
                        android:id="@+id/answer_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_option3"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_option4"
                        />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout style="@style/question_block">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/image_bullet"
                        android:src="@drawable/bullet_icon_1" />

                    <TextView
                        android:id="@+id/question_two"
                        style="@style/question_text"
                        android:text="@string/question_two" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/options_2"
                    style="@style/question_options"
                    android:orientation="vertical"
                    >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_option1" />

                    <RadioButton
                        android:id="@+id/answer_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_option2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_option3" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_option4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout style="@style/question_block">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/image_bullet"
                        android:src="@drawable/bullet_icon_6" />

                    <TextView
                        android:id="@+id/question_three"
                        style="@style/question_text"
                        android:text="@string/question_three" />
                </LinearLayout>

                <EditText
                    android:id="@+id/answer_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:hint="@string/q3_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout style="@style/question_block">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/image_bullet"
                        android:src="@drawable/bullet_icon_3" />

                    <TextView
                        android:id="@+id/question_four"
                        style="@style/question_text"
                        android:text="@string/question_four" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/options_4"
                    style="@style/question_options"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_option1" />

                    <RadioButton
                        android:id="@+id/answer_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_option2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_option3" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_option4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout style="@style/question_block">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/image_bullet"
                        android:src="@drawable/bullet_icon_2" />

                    <TextView
                        android:id="@+id/question_five"
                        style="@style/question_text"
                        android:text="@string/question_five" />
                </LinearLayout>


                <CheckBox
                    android:id="@+id/answer_5.1"
                    style="@style/question_options"
                    android:text="@string/q5_option1" />

                <CheckBox
                    android:id="@+id/options_5_a"
                    style="@style/question_options"
                    android:text="@string/q5_option2" />

                <CheckBox
                    android:id="@+id/options_5_b"
                    style="@style/question_options"
                    android:text="@string/q5_option3" />

                <CheckBox
                    android:id="@+id/answer_5.2"
                    style="@style/question_options"
                    android:text="@string/q5_option4" />


            </LinearLayout>

            <LinearLayout style="@style/question_block">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/image_bullet"
                        android:src="@drawable/bullet_icon_7" />

                    <TextView
                        android:id="@+id/question_six"
                        style="@style/question_text"
                        android:text="@string/question_six" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/options_6"
                    style="@style/question_options"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_option1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_option2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_option3" />

                    <RadioButton
                        android:id="@+id/answer_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_option4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout style="@style/question_block">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/image_bullet"
                        android:src="@drawable/bullet_icon_5" />

                    <TextView
                        android:id="@+id/question_seven"
                        style="@style/question_text"
                        android:text="@string/question_seven" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/options_7"
                    style="@style/question_options"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/answer_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q7_option1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q7_option2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q7_option3" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q7_option4" />

                </RadioGroup>
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="11dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/submit_button"
                    style="@style/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="finalScore"
                    android:text="@string/submit_main" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="match_parent"></View>

                <Button
                    style="@style/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="reset"
                    android:text="@string/reset_button" />
            </LinearLayout>

            <TextView
                android:id="@+id/score_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:fontFamily="sans-serif-condensed"
                android:text=""
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/bonus_navigator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:onClick="bonusPage"
                android:text=""
                android:textAllCaps="true"
                android:textColor="@color/button_colour" />
        </LinearLayout>


    </ScrollView>

</LinearLayout>
